# MiniGL

./: .gitignore  CMakeLists.txt  MiniGLConfig.h.in  readme.md
includes/glad/: glad.h
src/: main.cpp
src/MiniGL/: App.cpp  App.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Timer.h  VectorUtils.h  Window.cpp  Window.h
src/MiniGL/GPU/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GLUtils.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.h  VAO.cpp  VAO.h
src/MiniGL/Utils/: FileUtils.cpp  FileUtils.h
